scripts/09-ambassador-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ambassador
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind: ConsulResolver
      name: consul-dc1
      address: consul-consul-server.consul.svc.cluster.local:8500
      datacenter: dc1
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
   - port: 80
     targetPort: 8080
  selector:
    service: ambassador
