scripts/10-ambassador-consul-connector.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: ambassador-consul-connector
  annotations: 
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind: TLSContext
      name: ambassador-consul
      hosts: []
      secret: ambassador-consul-connect
spec:
  ports:
  - name: ambassador-consul-connector
    port: 80
  selector:
    component: consul-connect
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ambassador-consul-connect-integration
  labels:
    app: ambassador
    component: consul-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ambassador
      component: consul-connect
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ambassador
        component: consul-connect
      annotations:
        "consul.hashicorp.com/connect-inject": "false"
    spec:
      serviceAccountName: ambassador-consul-connect
      terminationGracePeriodSeconds: 0
      containers:
        - name: consul-connect-integration
          #image: quay.io/datawire/ambassador_pro:consul_connect_integration-%aproVersion%
          image: quay.io/datawire/ambassador_pro:consul_connect_integration-0.4.2
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 50Mi
