scripts/11-web-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  ports:
  - name: http
    port: 8080
    nodePort: 30145
  selector:
    app: web
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
        "consul.hashicorp.com/connect-service-upstreams": "api:8081"
    spec:
      containers:
      - name: web
        image: docker.io/vikramkhatri/hello-admin:1.0
        ports:
        - containerPort: 8080
          name: http
---
