scripts/12-qotm-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qotm
spec:
  type: ClusterIP
  ports:
   - port: 5000
  selector:
    app: qotm
