scripts/14-qotm-consul-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: qotm-consul
 annotations:
   getambassador.io/config: |
     ---
     apiVersion: ambassador/v1
     kind: Mapping
     name: consul_qotm_mapping
     prefix: /qotm-consul/
     service: qotm-consul
     resolver: consul-dc1
     load_balancer: 
       policy: round_robin
spec:
 ports:
 - name: http
   port: 8085
