scripts/05-create-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webconsole
  namespace: consul
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: webconsole.consul.io
    http:
      paths:
      - backend:
          serviceName: consul-ui
          servicePort: 80
        path: /
